@@ -11,7 +11,6 @@ import net.mcreator.plugin.Plugin;
 import net.mcreator.plugin.PluginLoader;
 import net.mcreator.plugin.events.workspace.MCreatorLoadedEvent;
 import net.mcreator.preferences.PreferencesManager;
-import net.mcreator.ui.init.L10N;
 import org.apache.commons.io.FileUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -20,6 +19,7 @@ import org.cdc.data.VersionManifest;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Objects;
@@ -63,17 +63,22 @@ public class PluginMain extends JavaPlugin {
 
     private JsonObject downloadAssets(String version) throws IOException {
         var locale = PreferencesManager.PREFERENCES.ui.language.get();
-        if (locale == L10N.DEFAULT_LOCALE) {
+        if (locale.getLanguage().equals("en")) {
             LOG.info("ignored language");
             return null;
         }
         String name = locale.getLanguage() + "_" + locale.getCountry().toLowerCase();
         LOG.info(name);
 
-        var cache = new File(UserFolderManager.getFileFromUserFolder("cache"), "cache" + name + ".json");
+        var cache = new File(UserFolderManager.getFileFromUserFolder("cache"), version +"-" + name + ".json");
         if (versionManifest != null) {
-            var url = new URL(versionManifest.getSpecificVersion(version).getClient().getAssetDownloadURL("minecraft/lang/" + name + ".json"));
-            cache.getParentFile().mkdirs();
+			URL url = null;
+			try {
+				url = new URI(versionManifest.getSpecificVersion(version).getClient().getAssetDownloadURL("minecraft/lang/" + name + ".json")).toURL();
+			} catch (URISyntaxException e) {
+				throw new RuntimeException(e);
+			}
+			cache.getParentFile().mkdirs();
             try {
                 long ms = System.currentTimeMillis() - cache.lastModified();
                 LOG.info("{} : {}", cache.getName(), ms);
